# pgditor

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  release.js  vite.config.js
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: allow-dialogs-fs.json  default.json  fs-dialog.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  utils.rs
src-tauri/src/ai/: mod.rs  stream.rs  tool_registry.rs
src-tauri/src/ai/tools/: get_table_schema.rs  mod.rs  search_tables.rs  select_table_rows.rs
src-tauri/src/commands/: create_new_window.rs  generate_chat_title.rs  generate_query.rs  get_table_data.rs  get_table_data_async.rs  list_schemas.rs  list_table_columns.rs  list_tables.rs  list_tables_for_graph.rs  mod.rs  raw_query.rs  show_main_window.rs  test_connection.rs
src-tauri/src/pg/: mod.rs  pg_connect.rs  quote_ident.rs
src/lib/commands/: CommandPalette.svelte  commandsContext.svelte.ts  commands_context.svelte.ts
src/lib/connection/: ConnectionButton.svelte  ConnectionDialog.svelte  connectionsContext.svelte.ts  connections_context.svelte.ts
src/lib/graph/: ForeignNode.svelte  Graph.svelte  GraphMenu.svelte  GraphView.svelte  SchemaSelect.svelte  TableNode.svelte  graph.ts  graphContext.svelte.ts  graph_context.svelte.ts
src/lib/helpers/: StoreContext.ts  anchor_to_target.svelte.ts  catchError.test.ts  catchError.ts  catch_error.ts  (+19 more)
src/routes/: +layout.svelte  +page.svelte
src/styles/: forms.css  tables.css
static/: prerender.js
(+102 files in other folders)
