[package]
name = "PGditor"
version = "0.0.1"
description = "A simple, minimalistic, and fast editor to work with your Postgres databases."
authors = ["jeremt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pgditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.9", features = [] }
tauri-plugin-opener = "2.0.0-beta.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tauri-plugin-sql = { version = "2.0.0-beta.1", features = ["postgres"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tauri-plugin-store = "2"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
tokio-postgres = "0.7"
native-tls = "0.2"
postgres-native-tls = "0.5"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-persisted-scope = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
